src/main/kotlin/com/example/helloworld/global/error/ErrorResponse.kt
package com.example.helloworld.global.error

import org.springframework.http.HttpStatus


class ErrorResponse(
    val code: Int,
    val msg: String
)